// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkBottomSheet renders correctly with action props 1`] = `
<DocumentFragment>
  <div
    class="bpk-dialog-wrapper"
  >
    <dialog
      aria-labelledby="bottom-sheet"
      class="bpk-dialog-wrapper--container bpk-bottom-sheet bpk-bottom-sheet--wide"
      data-open="true"
      id="my-bottom-sheet"
    >
      <div
        class="bpk-dialog-wrapper--contents"
        id="my-bottom-sheet-contents"
      >
        <header
          class="bpk-bottom-sheet--header"
        >
          <nav
            aria-labelledby="bpk-bottom-sheet-heading-my-bottom-sheet-bpk-navigation-bar-title"
            class="bpk-navigation-bar bpk-navigation-bar--default"
          >
            <div
              class="bpk-navigation-bar__leading-item bpk-navigation-bar__leading-item--default"
            >
              <button
                aria-label=""
                class="bpk-close-button__default"
                title=""
                type="button"
              >
                <span
                  class="bpk-close-button-icon"
                >
                  <svg
                    aria-hidden="true"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <span
              class="bpk-navigation-bar__title bpk-navigation-bar__title--default"
            >
              <span
                class="bpk-text bpk-text--label-1"
                id="bpk-bottom-sheet-heading-my-bottom-sheet-bpk-navigation-bar-title"
              />
            </span>
            <div
              class="bpk-navigation-bar__trailing-item bpk-navigation-bar__trailing-item-default"
            >
              <button
                class="bpk-link"
                type="button"
              >
                Action
              </button>
            </div>
          </nav>
        </header>
        <div
          class="bpk-bottom-sheet--content"
        >
          Bottom Sheet content
        </div>
      </div>
    </dialog>
  </div>
</DocumentFragment>
`;

exports[`BpkBottomSheet renders correctly with minimum prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-dialog-wrapper"
  >
    <dialog
      aria-labelledby="bottom-sheet"
      class="bpk-dialog-wrapper--container bpk-bottom-sheet"
      data-open="true"
      id="my-bottom-sheet"
    >
      <div
        class="bpk-dialog-wrapper--contents"
        id="my-bottom-sheet-contents"
      >
        <header
          class="bpk-bottom-sheet--header"
        >
          <nav
            aria-labelledby="bpk-bottom-sheet-heading-my-bottom-sheet-bpk-navigation-bar-title"
            class="bpk-navigation-bar bpk-navigation-bar--default"
          >
            <div
              class="bpk-navigation-bar__leading-item bpk-navigation-bar__leading-item--default"
            >
              <button
                aria-label=""
                class="bpk-close-button__default"
                title=""
                type="button"
              >
                <span
                  class="bpk-close-button-icon"
                >
                  <svg
                    aria-hidden="true"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <span
              class="bpk-navigation-bar__title bpk-navigation-bar__title--default"
            >
              <span
                class="bpk-text bpk-text--label-1"
                id="bpk-bottom-sheet-heading-my-bottom-sheet-bpk-navigation-bar-title"
              />
            </span>
          </nav>
        </header>
        <div
          class="bpk-bottom-sheet--content"
        >
          Bottom Sheet content
        </div>
      </div>
    </dialog>
  </div>
</DocumentFragment>
`;

exports[`BpkBottomSheet renders correctly with wide prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-dialog-wrapper"
  >
    <dialog
      aria-labelledby="bottom-sheet"
      class="bpk-dialog-wrapper--container bpk-bottom-sheet bpk-bottom-sheet--wide"
      data-open="true"
      id="my-bottom-sheet"
    >
      <div
        class="bpk-dialog-wrapper--contents"
        id="my-bottom-sheet-contents"
      >
        <header
          class="bpk-bottom-sheet--header"
        >
          <nav
            aria-labelledby="bpk-bottom-sheet-heading-my-bottom-sheet-bpk-navigation-bar-title"
            class="bpk-navigation-bar bpk-navigation-bar--default"
          >
            <div
              class="bpk-navigation-bar__leading-item bpk-navigation-bar__leading-item--default"
            >
              <button
                aria-label=""
                class="bpk-close-button__default"
                title=""
                type="button"
              >
                <span
                  class="bpk-close-button-icon"
                >
                  <svg
                    aria-hidden="true"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <span
              class="bpk-navigation-bar__title bpk-navigation-bar__title--default"
            >
              <span
                class="bpk-text bpk-text--label-1"
                id="bpk-bottom-sheet-heading-my-bottom-sheet-bpk-navigation-bar-title"
              />
            </span>
          </nav>
        </header>
        <div
          class="bpk-bottom-sheet--content"
        >
          Bottom Sheet content
        </div>
      </div>
    </dialog>
  </div>
</DocumentFragment>
`;
